@@ -2,7 +2,7 @@
 // $Id$
 /////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (C) 2018  The Bochs Project
+//  Copyright (C) 2018-2020  The Bochs Project
 //
 //  This library is free software; you can redistribute it and/or
 //  modify it under the terms of the GNU Lesser General Public
@@ -35,6 +35,7 @@ private:
   Bit8u get_edid_byte(void);
 
   struct {
+    Bit8u   ddc_mode;
     bx_bool DCKhost;
     bx_bool DDAhost;
     bx_bool DDAmon;
@@ -44,6 +45,7 @@ private:
     bx_bool ddc_rw;
     Bit8u   ddc_byte;
     Bit8u   edid_index;
+    Bit8u   edid_data[128];
   } s;  // state information
 };
 
